[gd_scene load_steps=18 format=3 uid="uid://dygruncd4bd4i"]

[ext_resource type="PackedScene" uid="uid://b4bcwfgvm4m6m" path="res://resources/Characters/enemies/enemy.tscn" id="1_qnkom"]
[ext_resource type="Script" uid="uid://bbs60el8quycu" path="res://resources/Characters/enemies/nagonford/boss.gd" id="2_usq5t"]
[ext_resource type="PackedScene" uid="uid://bt4il726k8d8x" path="res://resources/Characters/enemies/nagonford/Nagonford_Animated.glb" id="2_xo1to"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xo1to"]
radius = 1.0
height = 2.78125

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xo1to"]
animation = &"2H_Melee_Attack_Slice"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_usq5t"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_usq5t"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3e6tr"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_enhwc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fx2qo"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qk5dw"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_usq5t"]
states/idle/node = SubResource("AnimationNodeAnimation_usq5t")
states/idle/position = Vector2(334, 100)
states/walk/node = SubResource("AnimationNodeAnimation_3e6tr")
states/walk/position = Vector2(496, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_enhwc"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_fx2qo"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_qk5dw")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_enhwc"]
animation = &"2H_Melee_Attack_Spinning"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_usq5t"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_usq5t"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xo1to"]
nodes/output/position = Vector2(740, 140)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_xo1to")
nodes/AttackAnimation/position = Vector2(-160, 260)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_usq5t")
nodes/MoveStateMachine/position = Vector2(-160, 80)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_usq5t")
nodes/AttackOneShot/position = Vector2(160, 140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_usq5t")
nodes/TimeScale/position = Vector2(560, 120)
nodes/SpinBlend/node = SubResource("AnimationNodeBlend2_usq5t")
nodes/SpinBlend/position = Vector2(400, 140)
nodes/SpinAnimation/node = SubResource("AnimationNodeAnimation_enhwc")
nodes/SpinAnimation/position = Vector2(140, 420)
node_connections = [&"output", 0, &"TimeScale", &"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"TimeScale", 0, &"SpinBlend", &"SpinBlend", 0, &"AttackOneShot", &"SpinBlend", 1, &"SpinAnimation"]

[sub_resource type="SphereShape3D" id="SphereShape3D_usq5t"]
radius = 4.0

[node name="Boss" instance=ExtResource("1_qnkom")]
script = ExtResource("2_usq5t")

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.609375, 0)
shape = SubResource("CapsuleShape3D_xo1to")

[node name="Skin" parent="." index="1" instance=ExtResource("2_xo1to")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.7577726, 1, 0)

[node name="Skeleton3D" parent="Skin/Rig" index="0"]
bones/1/position = Vector3(0.008410764, 0.3780459, 1.2184853e-10)
bones/2/rotation = Quaternion(-0.060599465, -0.13028215, -0.007978079, 0.9895912)
bones/3/rotation = Quaternion(-2.220446e-16, -3.57567e-09, -2.8574743e-10, 1)
bones/4/position = Vector3(0.24804358, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.57771325, -0.24936369, -0.7347098, 0.25350907)
bones/5/rotation = Quaternion(4.4711978e-08, -6.8848514e-08, -0.5502459, 0.8350027)
bones/7/rotation = Quaternion(-0.19524248, -0.67253554, -0.053165175, 0.71186364)
bones/8/position = Vector3(5.1384585e-10, 0.09612511, -0.057500035)
bones/8/rotation = Quaternion(-6.2219203e-09, 4.3147903e-09, -0.7071068, 0.7071067)
bones/9/position = Vector3(-0.17668214, 0.11170339, 0.0891542)
bones/9/rotation = Quaternion(-0.24831918, 0.34150407, 0.8421738, 0.33534458)
bones/10/rotation = Quaternion(-1.770311e-08, 3.610951e-08, 0.5730907, 0.8194921)
bones/12/rotation = Quaternion(-0.2345841, 0.22342958, -0.11361769, 0.9392234)
bones/13/position = Vector3(-5.138494e-10, 0.096125126, -0.057500005)
bones/13/rotation = Quaternion(0.15571052, -0.18945536, 0.6702893, 0.7004093)
bones/15/rotation = Quaternion(0.085426524, 0.1304414, 0.0047045117, 0.9877577)
bones/17/position = Vector3(0.17094505, 0.11358726, 1.3923275e-08)
bones/17/rotation = Quaternion(0.9937275, 0.073376656, 0.03918678, 0.074738935)
bones/18/rotation = Quaternion(0.35023814, 6.2982224e-08, -2.455358e-07, 0.93666077)
bones/19/rotation = Quaternion(-0.5921314, -0.21350107, 0.05383669, 0.77517706)
bones/20/rotation = Quaternion(4.918048e-05, 0.9201605, -0.39154145, -1.10608835e-05)
bones/21/rotation = Quaternion(0.9911832, -0.039242405, -0.011746347, 0.12600762)
bones/22/rotation = Quaternion(0.3890353, -6.293627e-08, 2.6850148e-07, 0.92122287)
bones/23/rotation = Quaternion(-0.6028573, 0.112086624, -0.028075764, 0.7894374)
bones/24/rotation = Quaternion(-2.5614221e-05, 0.92016506, -0.39153066, 5.960156e-06)
bones/25/rotation = Quaternion(0.7071068, -2.2930234e-07, -4.605517e-08, 0.7071068)
bones/26/rotation = Quaternion(-0.7071068, -7.052851e-08, -7.0528486e-08, 0.7071068)
bones/27/position = Vector3(0.030839492, 0.38245776, -2.8668688e-15)
bones/27/rotation = Quaternion(1.0013814e-08, 1.91522e-09, 0.9846389, -0.1746031)
bones/28/position = Vector3(3.752948e-09, 0.21343613, -1.0342986e-08)
bones/28/rotation = Quaternion(-9.998893e-08, 0.39108434, 0.92035484, -3.3950656e-08)
bones/29/position = Vector3(2.3491044e-08, 0.16565004, -5.091363e-09)
bones/30/rotation = Quaternion(1, 2.3026052e-09, 1.9333544e-07, -4.398443e-16)
bones/32/rotation = Quaternion(0.7071068, -3.8238497e-08, 1.4500867e-07, 0.7071068)
bones/33/rotation = Quaternion(-0.7071068, -7.0528515e-08, -7.05285e-08, 0.7071068)
bones/34/rotation = Quaternion(-5.8358944e-09, 6.4383693e-10, 0.9948094, 0.10175614)
bones/35/position = Vector3(-1.114822e-08, 0.21343614, -2.5094192e-15)
bones/35/rotation = Quaternion(-1.05795515e-07, 0.39108434, 0.92035484, -2.5864264e-08)
bones/36/position = Vector3(-6.3112755e-09, 0.16565004, 2.7069498e-09)
bones/37/rotation = Quaternion(1, 3.7652574e-09, 1.9487908e-07, 7.4505815e-09)
bones/39/position = Vector3(0.8398419, 0.7198659, -0.44755834)
bones/39/rotation = Quaternion(-0.7071068, -7.279511e-08, -7.279509e-08, 0.7071068)
bones/40/position = Vector3(0.3397288, 0.81840146, 0.41280472)
bones/40/rotation = Quaternion(0.61184645, 0.064047195, 0.46529883, 0.63642675)
bones/41/position = Vector3(-0.87740976, 1.0355499, -0.44755882)
bones/41/rotation = Quaternion(-0.7071068, -7.279511e-08, -7.279509e-08, 0.7071068)
bones/42/position = Vector3(-0.33500427, 0.82588017, 0.2744581)
bones/42/rotation = Quaternion(-0.33075312, 0.22468758, 0.90319014, -0.15609434)

[node name="Nagonford_Axe" parent="Skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.2209191, 0.76197183, 0.60876316, 0.61750615, 0.37385672, -0.6920376, -0.7549033, 0.52879965, -0.3879307, -0.27730587, 0.69131327, 0.34875277)

[node name="AxeRaycast" type="RayCast3D" parent="Skin/Rig/Skeleton3D/Nagonford_Axe/Nagonford_Axe" index="0"]
target_position = Vector3(0, 1.325, 0)
collision_mask = 7

[node name="Nagonford_Cape" parent="Skin/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.9659258, 0.031580124, -0.25688517, -1.645845e-08, 0.992528, 0.12201618, 0.25881904, -0.11785857, 0.9587085, 0.027919859, 1.1836367, -0.07286809)

[node name="AnimationTree" parent="." index="2"]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeBlendTree_xo1to")
anim_player = NodePath("../Skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/TimeScale/scale = 0.5
parameters/SpinBlend/blend_amount = 0.0

[node name="Area3D" type="Area3D" parent="." index="3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("SphereShape3D_usq5t")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="Skin"]
